--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=postgresql://postgres:aDnLnRjwQLrLfrEEkguNRGtPCzRhWMbL@viaduct.proxy.rlwy.net:26449/railway
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:26449/railway
 spring.datasource.username=postgres
 spring.datasource.password=aDnLnRjwQLrLfrEEkguNRGtPCzRhWMbL
 spring.jpa.hibernate.ddl-auto=update
