--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:26449/railway
-spring.datasource.username=postgres
-spring.datasource.password=aDnLnRjwQLrLfrEEkguNRGtPCzRhWMbL
+spring.datasource.url=jdbc:postgresql://${Host_Name}:${DB_Port}/${DB_Name}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_Password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
